CICO-39917 fix alignment issue in public v2

--- a/zest_station/css/themes/public_v2/theme.less
+++ b/zest_station/css/themes/public_v2/theme.less
@@ -326,3 +326,6 @@
 		top: 10% !important;
 		height: 90% !important;
 	}
+	.admin-editor-toggle {
+		@media only screen and (min-width: 400px) and (max-width: 1409px) { margin-left: -1.175% !important; }
+	}
